# ChangeLog for app-text/poppler-data
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-text/poppler-data/ChangeLog,v 1.29 2010/02/02 19:03:55 ranger Exp $

  02 Feb 2010; Brent Baude <ranger@gentoo.org> poppler-data-0.4.0.ebuild:
  Marking poppler-data-0.4.0 ppc64 for bug 290464

  01 Feb 2010; Jeroen Roovers <jer@gentoo.org> poppler-data-0.4.0.ebuild:
  Stable for HPPA (bug #290464).

  01 Feb 2010; Christian Faulhammer <fauli@gentoo.org>
  poppler-data-0.4.0.ebuild:
  stable x86, security bug 290464

*poppler-data-0.4.0 (14 Jan 2010)

  14 Jan 2010; Ben de Groot <yngwin@gentoo.org> +poppler-data-0.4.0.ebuild:
  Version bump

  24 Dec 2008; Peter Alfredsen <loki_val@gentoo.org>
  -poppler-data-0.1.ebuild, -poppler-data-0.2.0.ebuild:
  Punt old

  17 Dec 2008; Peter Alfredsen <loki_val@gentoo.org> metadata.xml:
  Adding myself as maintainer, I've been de-facto maintainer for six months
  anyway.

  24 Nov 2008; Brent Baude <ranger@gentoo.org> poppler-data-0.2.1.ebuild:
  stable ppc64, bug 246327

  19 Nov 2008; Jeroen Roovers <jer@gentoo.org> poppler-data-0.2.1.ebuild:
  Stable for HPPA (bug #246327).

  15 Nov 2008; Tobias Scherbaum <dertobi123@gentoo.org>
  poppler-data-0.2.1.ebuild:
  ppc stable, bug #246327

  14 Nov 2008; Raúl Porcel <armin76@gentoo.org> poppler-data-0.2.1.ebuild:
  alpha/ia64/x86 stable wrt #246327

  11 Nov 2008; Jeremy Olexa <darkside@gentoo.org> poppler-data-0.2.1.ebuild:
  amd64 stable, bug 246327

  10 Nov 2008; Ferris McCormick <fmccor@gentoo.org>
  poppler-data-0.2.1.ebuild:
  Sparc stable --- Bug #246327 --- it's been a bit over a month now.

*poppler-data-0.2.1 (03 Oct 2008)

  03 Oct 2008; Peter Alfredsen <loki_val@gentoo.org>
  +poppler-data-0.2.1.ebuild:
  Bump

  08 Aug 2008; Markus Rothe <corsair@gentoo.org> poppler-data-0.2.0.ebuild:
  Stable on ppc64; bug #233807

  08 Aug 2008; nixnut <nixnut@gentoo.org> poppler-data-0.2.0.ebuild:
  Stable on ppc wrt bug 233807
