@@ -1,6 +1,9 @@
 # ChangeLog for app-text/poppler-data
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-text/poppler-data/ChangeLog,v 1.29 2010/02/02 19:03:55 ranger Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-text/poppler-data/ChangeLog,v 1.30 2010/02/03 22:10:22 maekke Exp $
+
+  03 Feb 2010; Markus Meier <maekke@gentoo.org> poppler-data-0.4.0.ebuild:
+  amd64 stable, bug #290464
 
   02 Feb 2010; Brent Baude <ranger@gentoo.org> poppler-data-0.4.0.ebuild:
   Marking poppler-data-0.4.0 ppc64 for bug 290464
